<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pcl_processing_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="pananwatanyoo@tudelft.nl">ros</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>ros-humble-ur</depend>
  <depend>ros-humble-ros2controlcli</depend>

  <exec_depend>keyboard</exec_depend>
  <depend>keyboard_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>